# Argon

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  PROJECT  README.md  argon  argon.conf  go.mod  go.sum  go.work  go.work.sum
.deploy/: argon-0.1.0.tgz  argon-0.2.0.tgz  argon-0.3.0.tgz  argon-0.4.0.tgz  argon-0.4.1.tgz  index.yaml
.github/workflows/: test-e2e.yml  test.yml
api/v1alpha1/: argonconfig_types.go  groupversion_info.go  zz_generated.deepcopy.go
cmd/: main.go
config/crd/: kustomization.yaml
config/default/: kustomization.yaml  metrics_service.yaml
config/manager/: manager.yaml
config/network-policy/: allow-metrics-traffic.yaml
config/prometheus/: monitor.yaml
config/rbac/: argonconfig_admin_role.yaml  argonconfig_editor_role.yaml  argonconfig_viewer_role.yaml  kustomization.yaml  leader_election_role.yaml  leader_election_role_binding.yaml  metrics_auth_role.yaml  metrics_auth_role_binding.yaml  metrics_reader_role.yaml  role.yaml  role_binding.yaml  service_account.yaml
dataplane/: Cargo.toml  build.rs
dataplane/.cargo/: config.toml
dataplane/proto/argon/: config.proto  config_proto.proto
dataplane/src/: argon.config.rs  certs.rs  client_pool.rs  grpc.rs  main.rs  proxy.rs  snapshot.rs  utils.rs
docs/: STRUCT.md  dataplane-profiling.md  dex-auth.md  settings.md
examples/: demo-ingress-auth.yaml  demo-ingress.yaml
helm/: Chart.yaml  values.yaml
include/: config.h  constants.h  http.h  request.h  server.h  thread_pool.h
sample/: demo-ingress.yaml
src/: config.c  config.rs  http.c  main.c  main.rs  request.c  server.c  server.rs  thread_pool.c
src/config/: mod.rs  (+4 more)
test/: go.mod
(+58 files in other folders)
