[package]
name = "dataplane"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dataplane"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tonic = { version = "0.12", default-features = false, features = ["transport", "codegen", "prost"] }
prost = "0.13"
hyper = { version = "1.6.0", features = ["full"] }
http-body-util = "0.1.3"
bytes = "1.10.1"
http = "1.3.1"
hyper-util = { version = "0.1.16", features = ["full"] }
rustls = "0.23.31"
tokio-rustls = "0.26.2"
rcgen = "0.14.3"
anyhow = "1.0.98"
arc-swap = "1.7.1"
rustls-pemfile = { version = "2.2.0"}
# prost-types = "0.13"

[build-dependencies]
tonic-build = "0.12.3"
# protoc-bin-vendored = "3"

